add text mandatory with number 'commission paritaire' in privacy-policy template

--- a/client-myjss/src/app/modules/general/components/privacy-policy/privacy-policy.component.html
+++ b/client-myjss/src/app/modules/general/components/privacy-policy/privacy-policy.component.html
@@ -604,6 +604,26 @@
             Ce site est hébergé par la SOCIETE DE PUBLICATIONS ET PUBLICITE POUR LES SOCIETES. Elle est joignable, en sa
             qualité d’hébergeur, aux mêmes coordonnées que visées ci-dessus.
           </p>
+          <h3 class="mb-2">Annonces légales</h3>
+          <p>Le site du Journal Spécial des Sociétés - https://www.jss.fr est habilité
+            à publier les annonces judiciaires légales par arrêté du préfet du département concerné pour
+            une durée d’an en date du : </p>
+          <ul>
+            <li> 10 décembre 2024 pour le département de Paris (75) </li>
+            <li> 16 décembre 2024 pour le département des Yvelines(78) </li>
+            <li> 24 décembre 2024 pour le département de l’Essonne(91)</li>
+            <li> 20 décembre 2024 pour le département des Hauts-de-Seine (92)</li>
+            <li> 31 décembre 2024 pour le département de la Seine-Saint-Denis(93)</li>
+            <li> 24 décembre 2024 pour le département du Val-de-Marne (94)</li>
+            <li> 18 décembre 2024 pour le département du Val-d’Oise (95)</li>
+          </ul>
+          <p>Commission paritaire : 1129 X 93537 </p>
+          <p> Les annonces légales portant sur les sociétés et fonds de commerce publiées
+            dans notre journal, sont automatiquement mises en ligne sur <a
+              href="www.actulegales.fr">www.actulegales.fr</a>. </p>
+          <p>Les prix sont fixés par l’Arrêté du 16 novembre 2024.
+            La direction décline toute responsabilité quant à la teneur des
+            annonces légales. </p>
         </div>
       </div>
     </div>
