--- a/client/src/app/modules/quotation/components/siren-dialog/siren-dialog.component.html
+++ b/client/src/app/modules/quotation/components/siren-dialog/siren-dialog.component.html
@@ -1,9 +1,9 @@
 <h1 mat-dialog-title>{{title}}</h1>
 <div mat-dialog-content>
   <p>{{label}}</p>
-  <autocomplete-siren [(model)]="siren" [form]="amountForm" propertyName="siren" [isMandatory]="true" label="SIREN"
+  <autocomplete-siret [(model)]="siret" [form]="amountForm" propertyName="siren" [isMandatory]="true" label="SIRET"
     [isDisabled]="false" [byPassAutocompletValidator]="true" [fieldToCheckAgainstForValidation]="'siren'">
-  </autocomplete-siren>
+  </autocomplete-siret>
 </div>
 <div mat-dialog-actions align="end">
   <button mat-raised-button color="accent" (click)="onClose()">Annuler</button>
