--- a/client-osiris/src/app/libs/generic-list/generic-list.component.html
+++ b/client-osiris/src/app/libs/generic-list/generic-list.component.html
@@ -62,11 +62,11 @@
               </div>
               }@else {
               @if(form.form && form.accessorKey){
-              @if(form.accessorIndex){
-              <generic-form [formGroup]="searchForm" [(model)]="searchModel[form.accessorKey][form.accessorIndex!]"
-                [label]="form.form.label" [type]="form.form.type" [inputType]="form.form.inputType"
-                [selectType]="form.form.selectType" [validators]="form.form.validators"
-                [errorMessages]="form.form.errorMessages"></generic-form>
+              @if(form.accessorIndex ){
+              <generic-form [formGroup]="searchForm"
+                [(model)]="$any(searchModel[form.accessorKey])[form.accessorIndex!]" [label]="form.form.label"
+                [type]="form.form.type" [inputType]="form.form.inputType" [selectType]="form.form.selectType"
+                [validators]="form.form.validators" [errorMessages]="form.form.errorMessages"></generic-form>
               }@else{
               <generic-form [formGroup]="searchForm" [(model)]="searchModel[form.accessorKey]" [label]="form.form.label"
                 [type]="form.form.type" [inputType]="form.form.inputType" [selectType]="form.form.selectType"
