add deposit on service type and pause on weekend for confrere reminders

--- a/client/src/app/modules/administration/components/competent-authority/competent-authority.component.html
+++ b/client/src/app/modules/administration/components/competent-authority/competent-authority.component.html
@@ -139,6 +139,12 @@
                       [maxLength]="2000">
                     </generic-input>
                   </td>
+                  <td>
+                    <generic-input [(model)]="selectedcompetentAuthority.jssAccountNumber" label="Numéro de compte"
+                      [form]="entityForm2" propertyName="jssAccountNumber" [isMandatory]="false"
+                      [isDisabled]="!editMode" [maxLength]="250">
+                    </generic-input>
+                  </td>
                 </tr>
               </table>
               <table class="full-width">
