--- a/client/src/app/modules/administration/components/referentials/referential-service/referential-service-type.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-service/referential-service-type.component.html
@@ -58,22 +58,29 @@
           <tr>
             <td>
               <generic-toggle [(model)]="selectedEntity.isRequiringNewUnregisteredAffaire"
-                label="Nécessite l'utilisation d'une affaire non enregistrée au RNE" [form]="entityForm"
+                label="Nécessite l'utilisation d'une affaire non enregistrée au RNE ?" [form]="entityForm"
                 propertyName="isRequiringNewUnregisteredAffaire" [isDisabled]="!editMode"></generic-toggle>
             </td>
           </tr>
           <tr>
             <td>
               <generic-toggle [(model)]="selectedEntity.isRequiringNewRegisteredAffaire"
-                label="Nécessite l'utilisation d'une affaire enregistrée au RNE" [form]="entityForm"
+                label="Nécessite l'utilisation d'une affaire enregistrée au RNE ?" [form]="entityForm"
                 propertyName="isRequiringNewRegisteredAffaire" [isDisabled]="!editMode"></generic-toggle>
             </td>
           </tr>
           <tr>
             <td>
               <generic-toggle [(model)]="selectedEntity.isMergeable"
-                label="Peut être fusionné à d'autres services fusionnables" [form]="entityForm"
+                label="Peut être fusionné à d'autres services fusionnables ?" [form]="entityForm"
                 propertyName="isMergeable" [isDisabled]="!editMode"></generic-toggle>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <generic-toggle [(model)]="selectedEntity.isProvisionalPaymentMandatory"
+                label="Service type à l'acompte obligatoire ?" [form]="entityForm"
+                propertyName="isProvisionalPaymentMandatory" [isDisabled]="!editMode"></generic-toggle>
             </td>
           </tr>
           <tr>
