--- a/client-myjss/src/app/modules/company/components/our-team/our-team.component.html
+++ b/client-myjss/src/app/modules/company/components/our-team/our-team.component.html
@@ -66,7 +66,7 @@
               </div>
             </div>
           </div>
-          <h4 class="mt-5 mb-2 text-center text-white">Ils nous accompagnent </h4>
+          <h4 class="mt-5 mb-5 text-center text-white">Elles nous accompagnent </h4>
           <div class="row row-cols-2 row-cols-lg-4 flex-lg-wrap gy-lg-5 mx-n3 justify-content-center">
             <div class="col" *ngFor="let person of staff['formalitesPartner']">
               <div class="d-block text-center text-decoration-none mt-4 mt-md-0" style="min-width: 110px;">
