--- a/client-myjss/src/app/modules/quotation/components/notice-template/notice-template.component.html
+++ b/client-myjss/src/app/modules/quotation/components/notice-template/notice-template.component.html
@@ -89,10 +89,10 @@
               </div>
 
               <div class="col-12 mt-3" *ngIf="selections.length>1">
-                <!-- TODO : changer isRequired et mettre un teblea de boolean à la place -->
                 <select-announcement-notice-template-fragment [types]="selections" [(model)]="selectedFragments[i]"
                   (modelChange)="onFragmentSelectionChange($event, i)" label="Selectionner" [form]="form"
-                  [propertyName]="'SELECT_'+ i" [isMandatory]="isRequired(selections)">
+                  [propertyName]="'SELECT_'+ i"
+                  [isMandatory]="selectFragmentInfosMap.get(i) ? selectFragmentInfosMap.get(i)!.isRequired : false">
                 </select-announcement-notice-template-fragment>
               </div>
             </div>
