first attempt to fix bug

--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
@@ -66,9 +66,12 @@
 
         <ng-container
           *ngFor="let provision of quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].provisions; let provisionIndex = index">
-          <li [ngbNavItem]="getIndexForProvision(provision)"
+          <li
+            [ngbNavItem]="getIndexForProvision(provisionIndex, quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].provisions)"
             *ngIf="provision.provisionType.provisionScreenType.code == PROVISION_SCREEN_TYPE_ANNOUNCEMENT && provision.announcement">
-            <button ngbNavLink>Annonce légale {{ provision.order && provision.order>1 ? provision.order : '' }}
+            <button ngbNavLink>Annonce légale {{
+              getNbOfProvisionsAnnouncement(quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].provisions)>1
+              ? provision.order+1 : '' }}
             </button>
             <ng-template ngbNavContent>
               <div class="quotation-container">
@@ -197,7 +200,8 @@
             </ng-template>
           </li>
 
-          <li class="nav-item " [ngbNavItem]="getIndexForProvision(provision)"
+          <li class="nav-item "
+            [ngbNavItem]="getIndexForProvision(provisionIndex, quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].provisions)"
             *ngIf="provision.provisionType.provisionScreenType.code == PROVISION_SCREEN_TYPE_DOMICILIATION && provision.domiciliation">
             <button ngbNavLink>Domiciliation</button>
             <ng-template ngbNavContent>
@@ -890,7 +894,9 @@
             </ng-template>
           </li-->
         </ng-container>
-        <li [ngbNavItem]="40" *ngIf="(quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].assoServiceFieldTypes ||
+        <li
+          [ngbNavItem]="getIndexForProvision(-1, quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].provisions)"
+          *ngIf="(quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].assoServiceFieldTypes ||
         quotation.assoAffaireOrders[selectedAssoIndex].services[selectedServiceIndex].assoServiceDocuments)">
           <button ngbNavLink>Documents & informations complémentaires
           </button>
