new hub component for detailled service-type, access from mandatory-component

--- a/client-myjss/src/app/modules/tools/components/mandatory-documents/mandatory-documents.component.html
+++ b/client-myjss/src/app/modules/tools/components/mandatory-documents/mandatory-documents.component.html
@@ -66,80 +66,13 @@
   </ul>
   <ng-container *ngFor="let serviceType of filteredServiceTypesByFamily[selectedFamilyTab.id];">
     <ng-container *ngIf="serviceType">
-      <div class="card dark-blue-dropdown rounded-3 mt-3 " [ngClass]="{ 'expanded-card':  isExpanded(serviceType.id) }">
-        <div class="card-header d-flex justify-content-between align-items-center p-0 pt-3 pointer"
-          (click)="toggleCard(serviceType)">
-          <h5 class="card-title mb-1">{{ serviceType.customLabel }}</h5>
-          <button type="button" class="btn btn-link rounded-circle custom-btn">
-            <span class="circle-icon">
-              <i [ngClass]=" isExpanded(serviceType.id) ? 'ai-chevron-up' : 'ai-chevron-down'" class="fs-4"></i>
-            </span>
+      <div class="card dark-blue-dropdown rounded-3 mt-3 ">
+        <div class="card-header d-flex justify-content-between align-items-center p-0 py-2 pointer"
+          (click)="goToDetailServiceType(serviceType)">
+          <h5 class="card-title mb-0">{{ serviceType.customLabel }}</h5>
+          <button type="button" class="btn btn-link">
+            <i [ngClass]="'ai-circle-arrow-right'" class="fs-3"></i>
           </button>
-        </div>
-
-        <div class="drop-down-body">
-          <div class="row ps-4 pe-5 me-5 ms-2">
-            <ng-container
-              *ngIf="isExpanded(serviceType.id) && serviceType.assoServiceTypeDocuments && serviceType.assoServiceTypeDocuments.length>0">
-              <h6 *ngIf="hasMandatoryDocuments">Documents obligatoires</h6>
-              <ng-container *ngFor="let item of  serviceType.assoServiceTypeDocuments">
-                <div class="col-12 col-md-4 g-2" *ngIf="item.isMandatory">
-                  <li class="d-flex pb-2 mb-1">
-                    <span class="bg-primary mt-2 checkbox-custom"></span>
-                    <span class="text-decoration-none text-gray">{{item.typeDocument.customLabel}}</span>
-                    <button type="button"
-                      class="ms-3 btn btn-outline-secondary btn-sm d-flex align-items-center btn-icon-only"
-                      *ngIf="item.typeDocument.attachments && item.typeDocument.attachments[0]"
-                      (click)="downloadAttachment(item.typeDocument.attachments[0])" ngbTooltip="Télécharger le modèle"
-                      tooltipClass="custom-tooltip" placement="top">
-                      <i class="bi bi-download"></i>
-                      <span class="d-none d-lg-inline ms-1">Télécharger le modèle</span>
-                    </button>
-                  </li>
-                </div>
-              </ng-container>
-            </ng-container>
-            <ng-container
-              *ngIf="isExpanded(serviceType.id) && serviceType.assoServiceTypeDocuments && serviceType.assoServiceTypeDocuments.length>0">
-              <h6 *ngIf="hasNonMandatoryDocuments">Documents optionnels</h6>
-              <ng-container *ngFor="let item of  serviceType.assoServiceTypeDocuments">
-                <div class="col-12 col-md-4 g-2" *ngIf="!item.isMandatory">
-                  <li class="d-flex pb-2 mb-1">
-                    <span class="bg-primary mt-2 checkbox-custom"></span>
-                    <span class="text-decoration-none text-gray">{{item.typeDocument.customLabel}}</span>
-                    <button type="button"
-                      class="ms-3 btn btn-outline-secondary btn-sm d-flex align-items-center btn-icon-only"
-                      *ngIf="item.typeDocument.attachments && item.typeDocument.attachments[0]"
-                      (click)="downloadAttachment(item.typeDocument.attachments[0])" ngbTooltip="Télécharger le modèle"
-                      tooltipClass="custom-tooltip" placement="top">
-                      <i class="bi bi-download"></i>
-                      <span class="d-none d-lg-inline ms-1">Télécharger le modèle</span>
-                    </button>
-                  </li>
-                </div>
-              </ng-container>
-            </ng-container>
-            <hr
-              *ngIf="isExpanded(serviceType.id) && serviceType.assoServiceTypeDocuments && serviceType.assoServiceTypeDocuments.length>0 &&  serviceType.assoServiceTypeFieldTypes&& serviceType.assoServiceTypeFieldTypes.length>0" />
-            <ng-container
-              *ngIf="isExpanded(serviceType.id) && serviceType.assoServiceTypeFieldTypes && serviceType.assoServiceTypeFieldTypes.length>0">
-              <h6>Informations complementaires</h6>
-              <div class="col-12 col-md-4 g-2" *ngFor="let item of  serviceType.assoServiceTypeFieldTypes">
-                <li class="d-flex pb-2 mb-1">
-                  <span class="bg-primary mt-2 checkbox-custom"></span>
-                  <span class="text-decoration-none text-gray">{{item.serviceFieldType.label}} <span
-                      *ngIf="item.serviceFieldType.dataType ==SERVICE_FIELD_TYPE_SELECT ">{{getPossibleFieldsValuesForSelect(item.serviceFieldType)}}</span></span>
-                </li>
-              </div>
-            </ng-container>
-            <div class="g-2 ms-4"
-              *ngIf="isExpanded(serviceType.id) && (!serviceType.assoServiceTypeDocuments || serviceType.assoServiceTypeDocuments.length==0) &&  (!serviceType.assoServiceTypeFieldTypes || serviceType.assoServiceTypeFieldTypes.length==0)">
-              <li class="d-flex pb-2 mb-1">
-                <span class="text-decoration-none text-gray">Aucun document nécessaire, contactez notre service pour
-                  plus d'information</span>
-              </li>
-            </div>
-          </div>
         </div>
       </div>
     </ng-container>
