--- a/client-jss/src/app/main/components/post/post.component.html
+++ b/client-jss/src/app/main/components/post/post.component.html
@@ -159,10 +159,9 @@
           <section class="pt-0" *ngIf="post">
             <div class="row">
               <!-- Main Content START -->
-              <div>
-                <img *ngIf="post.media" class="rounded-2 mb-2 resize-featured-img"
-                  [src]="post.media.urlFull ? post.media.urlFull : ''">
-                <figcaption class="figure-caption" *ngIf=" post.media.captionText">{{post.media.captionText}}
+              <div *ngIf="post.media">
+                <img class="rounded-2 mb-2 resize-featured-img" [src]="post.media.urlFull ? post.media.urlFull : ''">
+                <figcaption class="figure-caption" *ngIf="post.media.captionText">{{post.media.captionText}}
                 </figcaption>
               </div>
 
