fix remove burger menu in desktop mode myjss

--- a/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
+++ b/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
@@ -5,7 +5,7 @@
 
       <!-- Mobile menu toggler (Hamburger) -->
       <div class="col-4 d-flex justify-content-start">
-        <button class="navbar-toggler" id="navToggler" type="button" aria-label="Toggle navigation"
+        <button class="navbar-toggler d-lg-none" id="navToggler" type="button" aria-label="Toggle navigation"
           (click)="isNavbarCollapsed = !isNavbarCollapsed">
           <span class="text-body h6"></span>
           <span class="navbar-toggler-icon" [ngClass]="{'navbar-toggler-icon-light': isForQuotationNavbar}"></span>
