--- a/client/src/app/modules/tiers/components/tiers/tiers.component.html
+++ b/client/src/app/modules/tiers/components/tiers/tiers.component.html
@@ -105,6 +105,10 @@
   *ngIf="editMode==false &&  tiers.id" (click)="deleteTiers()">
   <mat-icon>delete</mat-icon>
 </button>
+<a matTooltip="Voir le tiers dans Osiris V2" mat-fab color="accent" class="fourth-fab-button"
+  *ngIf="editMode==false &&  tiers.id" [href]="frontendOsirisV2Url + OSIRIS_V2_TIERS_ROUTE + tiers.id" target="_blank">
+  <mat-icon>launch</mat-icon>
+</a>
 <button matTooltip="Imprimer une étiquette pour le tiers" mat-fab color="accent" class="fifth-fab-button"
   *ngIf="editMode==false &&  tiers.id" (click)="printLabel()">
   <mat-icon>print</mat-icon>
