--- a/client-myjss/src/app/modules/my-services/components/myjss-services/myjss-services.component.html
+++ b/client-myjss/src/app/modules/my-services/components/myjss-services/myjss-services.component.html
@@ -11,10 +11,14 @@
   </nav>
 
   <!-- Nav tabs -->
-  <ul class="nav nav-tabs " role="tablist">
+  <ul class="nav nav-tabs" role="tablist">
     <li class="nav-item" *ngFor="let item of myJssServicesItems;">
-      <a class="nav-link" [class.active]="item == selectedTab" [routerLink]="item.route">
-        <i class="fi-home me-2 "></i>
+      <span class="nav-link active" *ngIf="item === selectedTab">
+        <i class="fi-home me-2"></i>
+        {{ item.label }}
+      </span>
+      <a class="nav-link" *ngIf="item !== selectedTab" [routerLink]="item.route">
+        <i class="fi-home me-2"></i>
         {{ item.label }}
       </a>
     </li>
